Brush radius getting stuck when 8 pixels or smaller (retina display, Yosemite) #43556

Closed
opened 2015-02-04 08:00:25 +01:00 by Seth L. · 11 comments

System Information
2.5 GHz i7 MacBook Pro
OS X 10.10.2 (Yosemite)
Memory: 16GB
GPU: Intel Iris Pro 1536MB

  • and -
    iMac, 5K 27-inch, 4GHz Intel Core i7
    OS X 10.10.2 (Yosemite)
    Memory: 32GB
    GPU: AMD Radeon R9 M295X 4096MB

Blender Version
Broken: 2.73a bbf09d9 on retina display MacBook Pro running Yosemite 10.10.2
Less broken: 2.73a bbf09d9 on 5K retina display iMac running Yosemite 10.10.2
Works: 2.73a bbf09d9 on non-retina MacBook Air running Snow Leopard 10.6.8

Short description of error
In the Paint context of the UV/Image Editor normally the angular bracket keys "- [ ]" will increase or decrease the brush radius.
Today on the MacBook Pro I noticed the radius slider was not updating when I resized the brush using the keyboard shortcuts. But then when I hovered my cursor over the panel the slider immediately refreshed and updated to the correct value. I could reproduce this effect every time.

Then I noticed that brush size was not increasing when I used the "]" key. Looking at the slider it was a radius of 1 pixel, so I thought maybe the way the brush enlarges is by multiplication and since 1x1=1 it would not get bigger, but after some experimentation I realized any radius of 8 pixels or lower is the magic value at which the brush size can no longer be increased using the normal keyboard method. I copied my .blend file to an older Mac and found that I could resize as normal, which led me to the conclusion that this bug is specific to either the OS version or the hardware.

Finally, I tested this on a retina display 5K iMac and found that while the slider updated as normal it would still get stuck at an 8 pixels or less brush radius. So the slider refresh problem could be graphics card related, and the size problem could be display related. I'm guessing the symptoms are connected so I'm submitting one bug report for both issues.

Exact steps for others to reproduce the error

  1. Create a new image in the UV/Image Editor
  2. Enter Paint Mode and make your brush settings visible in the Tools panel.
  3. Use the bracket keys to adjust your brush radius and note how the slider does not update. And note that once you decrease the brush size below a radius of 8 pixels you cannot enlarge it again using the keyboard.
**System Information** 2.5 GHz i7 MacBook Pro OS X 10.10.2 (Yosemite) Memory: 16GB GPU: Intel Iris Pro 1536MB - and - iMac, 5K 27-inch, 4GHz Intel Core i7 OS X 10.10.2 (Yosemite) Memory: 32GB GPU: AMD Radeon R9 M295X 4096MB **Blender Version** Broken: 2.73a bbf09d9 on retina display MacBook Pro running Yosemite 10.10.2 Less broken: 2.73a bbf09d9 on 5K retina display iMac running Yosemite 10.10.2 Works: 2.73a bbf09d9 on non-retina MacBook Air running Snow Leopard 10.6.8 **Short description of error** In the Paint context of the UV/Image Editor normally the angular bracket keys "- [ ]" will increase or decrease the brush radius. Today on the MacBook Pro I noticed the radius slider was not updating when I resized the brush using the keyboard shortcuts. But then when I hovered my cursor over the panel the slider immediately refreshed and updated to the correct value. I could reproduce this effect every time. Then I noticed that brush size was not increasing when I used the "]" key. Looking at the slider it was a radius of 1 pixel, so I thought maybe the way the brush enlarges is by multiplication and since 1x1=1 it would not get bigger, but after some experimentation I realized any radius of 8 pixels or lower is the magic value at which the brush size can no longer be increased using the normal keyboard method. I copied my .blend file to an older Mac and found that I could resize as normal, which led me to the conclusion that this bug is specific to either the OS version or the hardware. Finally, I tested this on a retina display 5K iMac and found that while the slider updated as normal it would still get stuck at an 8 pixels or less brush radius. So the slider refresh problem could be graphics card related, and the size problem could be display related. I'm guessing the symptoms are connected so I'm submitting one bug report for both issues. **Exact steps for others to reproduce the error** 1. Create a new image in the UV/Image Editor 2. Enter Paint Mode and make your brush settings visible in the Tools panel. 3. Use the bracket keys to adjust your brush radius and note how the slider does not update. And note that once you decrease the brush size below a radius of 8 pixels you cannot enlarge it again using the keyboard.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly
Julian Eisel self-assigned this 2015-02-05 14:01:40 +01:00
Member

Can confirm both, but seems like they are not related. To reproduce the "8px bug" it's needed to set the pixelsize to 2.

Can confirm both, but seems like they are not related. To reproduce the "8px bug" it's needed to set the pixelsize to 2.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Fixed the refreshing issue but I could not reproduce the stuck behaviour. Code logic also seems solid, will leave to someone who can reproduce.

Fixed the refreshing issue but I could not reproduce the stuck behaviour. Code logic also seems solid, will leave to someone who can reproduce.

Argh! I see what happened, will fix now

Argh! I see what happened, will fix now
Julian Eisel removed their assignment 2015-02-05 18:19:54 +01:00
Antonis Ryakiotakis was assigned by Julian Eisel 2015-02-05 18:19:54 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Do whatever you want ;)

Do whatever you want ;)

This issue was referenced by 77698f6010

This issue was referenced by 77698f601021eb557be38945ed74706a325b1c57

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 77698f6010.

Closed by commit 77698f6010.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43556
No description provided.