Fix part of T43556 brush increase/decrease size operators do not update the UI sliders.